--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp-projects",
+  "name": "gulp",
   "version": "1.0.0",
-  "description": "Starter SCSS files & scripts",
+  "description": "Gulp start files & logic",
   "main": "index.js",
   "scripts": {
     "start": "npm i"
@@ -13,6 +13,7 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^9.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
@@ -22,5 +23,22 @@
     "gulp-terser": "^2.1.0",
     "sass": "^1.72.0"
   },
-  "type": "module"
+  "type": "module",
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "edge": "17",
+            "firefox": "60",
+            "chrome": "67",
+            "safari": "11.1"
+          },
+          "useBuiltIns": "usage",
+          "corejs": "3.6.5"
+        }
+      ]
+    ]
+  }
 }
