--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Gulp start files & logic",
   "main": "index.js",
   "scripts": {
-    "start": "npm i"
+    "start": "npm i",
+    "watch": "sass public/Jormungandr/styles/main.scss public/css/main.css"
   },
   "keywords": [],
   "author": "Jormungandr",
@@ -23,22 +24,5 @@
     "gulp-terser": "^2.1.0",
     "sass": "^1.72.0"
   },
-  "type": "module",
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "edge": "17",
-            "firefox": "60",
-            "chrome": "67",
-            "safari": "11.1"
-          },
-          "useBuiltIns": "usage",
-          "corejs": "3.6.5"
-        }
-      ]
-    ]
-  }
+  "type": "module"
 }
